# tmuxy

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.local.md  CLAUDE.md  Cargo.toml  Dockerfile  MIGRATION_PLAN.md  PLAN.md  PR_BODY.md  README.md  STATUS.md  compose.yml  docker-compose.yml  eslint.config.mjs  jest.config.js  package-lock.json  package.json
.claude/: README.md  settings.local.json  start.sh
.devcontainer/: .tmux-dev.conf  .tmuxy.conf  .tmuxy.defaults.conf  .zshrc  Dockerfile  compose.yml  devcontainer.json  entrypoint.sh  fix-credential-ownership.sh  init-firewall.sh  persist-claude-login.sh  remap-user.sh
.githooks/: pre-commit
.github/: pre-commit
docker/: .tmuxy.conf
docs/: ARCHITECTURE.md  COPY-MODE.md  DATA-FLOW.md  E2E-TEST-SCENARIOS.md  NON-GOALS.md  PERFORMANCE.md  README.md  RICH-RENDERING.md  SECURITY.md  STATE-MANAGEMENT.md  TESTS.md  TMUX.md  WINDOW-TAGS.md  architecture.md  communication.md  copy-mode.md  data-flow.md  e2e-test-scenarios.md  non-goals.md  rich-rendering.md  security.md  state-management.md  tests.md  tmux.md
learnings/: 2026_02_09_tmux_control_mode.md
notes/: deep-review.md
scripts/: build-tauri.sh  compress-image.js  deploy-gcloud.sh  dev.sh  devcontainer.sh  float.sh  kill-port.sh  prod.sh  screenshot-pw.js  screenshot.sh  tmuxy-cli  tmuxy-state.sh  tunnel-cdp.sh
tasks/: 2026_01_13_refactor_cleanup.md  2026_01_15_performance_plan.md  2026_01_15_react_research.md  2026_01_15_refactor_plan.md  2026_01_15_remove_local_preview_state.md  2026_01_15_tauri_research.md  2026_01_15_tmux_research.md  2026_01_15_ui_refactor_plan.md  2026_01_24_actor_refactor.md  2026_01_24_emulator_research.md  TERMINAL_PERFORMANCE_RESEARCH.md  e2e-test-audit.md  e2e-test-deep-audit.md  issue-1-tmux-popup.md  issue-10-osc-protocols.md  issue-2-mouse-events.md  issue-3-pane-stack.md  issue-4-float-panes.md  issue-5-tmuxy-view.md  issue-6-file-picker.md  issue-7-ime-handling.md  issue-8-flow-control.md  (+2 more)
(+150 files in other folders)
