[workspace]
resolver = "2"
members = [
    "packages/tmuxy-core",
    "packages/tauri-app",
    "packages/web-server",
    "packages/tmuxy-server",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Felipe"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
