[workspace]
resolver = "2"
members = [
    "packages/tmuxy-core",
    "packages/tauri-app",
    "packages/tmuxy-server",
]

[workspace.package]
version = "0.0.10-alpha.30"
edition = "2021"
authors = ["Felipe"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[profile.release.package.tauri-app]
strip = false
