[workspace]
resolver = "2"
members = [
    "packages/tmuxy-core",
    "packages/tmuxy-tauri-app",
    "packages/tmuxy-server",
    "packages/tmuxy-wasm",
    "packages/tmuxy-tree",
    "packages/tmuxy-connect",
]

[workspace.package]
version = "0.0.10-alpha.38"
edition = "2021"
authors = ["Felipe"]

[workspace.dependencies]
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[profile.release.package.tmuxy-tauri-app]
strip = false
